--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,25 +8,101 @@
     <!-- DaisyUI cdn -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- poppins fonts cdn -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <!-- sora fonts cdn -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
     <style>
+        .poppins-fonts {
+            font-family: "Poppins", serif;
+        }
 
+        .sora-fonts {
+            font-family: "Sora", serif;
+
+        }
     </style>
     <script>
         tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-                'bike-primary': '#E76F51',
-                'bike-primary-bg': 'rgba(231, 111, 81, 0.1)',
-    
-              }
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        'bike-primary': '#E76F51',
+                        'bike-primary-bg': 'rgba(231, 111, 81, 0.1)',
+
+                    }
+                }
             }
-          }
         }
-      </script>   
+    </script>
 </head>
+
 <body>
-    
+    <header class="md:container mx-auto sora-fonts">
+        <nav>
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                            <li><a>Product</a></li>
+                            <li><a>Services</a></li>
+                            <li><a>Contact us</a></li>
+                        </ul>
+                    </div>
+                    <img class="w-[154px]" src="c2-assets/logo-header.png" alt="">
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1">
+                        <li><a>Product</a></li>
+                        <li><a>Services</a></li>
+                        <li><a>Contact us</a></li>
+                    </ul>
+                </div>
+                <div class="navbar-end gap-[13px] ">
+                    <a class="btn border-solid border-2 border-green-600 w-[117px]">Login</a>
+                    <a class="btn bg-success text-white w-[146px] ">Register</a>
+                </div>
+            </div>
+        </nav>
+
+        <!-- banner section -->
+        <section class="mt-[90px]">
+            <div>
+                <!-- text contant -->
+            <div class="text-center mx-[35px] md:mx-[30px] lg:[386px]">
+                <h2 class="text-4xl md:text-5xl lg:text-6xl font-semibold ">Freshness <span class="text-green-700">You Can <br>
+                    Count On</span>, Prices You’ll Love!</h2>
+                    <br>
+                <p>
+                    Shop your daily essentials at unbeatable prices. From fresh produce to pantry <br> staples, we’ve got you
+                    covered every day!
+                </p>
+            </div>
+            <img class="w-full" src="c2-assets/hero-vegetables.png" alt="">
+        </div>
+         </section>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
