added assignment 3 done

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         covered every day!
                     </p>
                 </div>
-                <img class="w-full" src="c2-assets/hero-vegetables.png" alt="">
+                <img class="w-full hover:scale-75 " src="c2-assets/hero-vegetables.png" alt="">
             </div>
         </section>
     </header>
